Commencer dans store

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,4 +38,6 @@ security:
         - { path: ^/signup, roles: PUBLIC_ACCESS }
         - { path: ^/home, roles: PUBLIC_ACCESS }    
         - { path: ^/register, roles: PUBLIC_ACCESS }
+        - { path: ^/game_creation, roles: PUBLIC_ACCESS}
+        - { path: ^/store, roles: PUBLIC_ACCESS}
         - { path: ^/, roles: [ROLE_USER, ROLE_ADMIN] }
