--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,7 +39,7 @@ security:
                 always_remember_me: false
 
     access_control:
-        - { path: ^/cart, roles: ROLE_USER }
+        - { path: ^/cart, roles: [ROLE_USER, ROLE_ADMIN] }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/signup, roles: PUBLIC_ACCESS }
         - { path: ^/home, roles: PUBLIC_ACCESS }    
