--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,9 @@
 twig:
     file_name_pattern: '*.twig'
 
+    form_themes:
+        - 'form/star_rating.html.twig'
+
 when@test:
     twig:
         strict_variables: true
