feat: admin dashboard (crud for entities related to games + user)

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,5 +47,6 @@ security:
         - { path: ^/home, roles: PUBLIC_ACCESS }    
         - { path: ^/register, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: [ROLE_USER, ROLE_ADMIN] }
+        - { path: ^/admin, roles: [ROLE_ADMIN] }
 
 
