--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,6 +42,7 @@ security:
 
     access_control:
         - { path: ^/cart, roles: [ROLE_USER, ROLE_ADMIN] }
+        - { path: ^/search, roles: PUBLIC_ACCESS }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/signup, roles: PUBLIC_ACCESS }
         - { path: ^/home, roles: PUBLIC_ACCESS }    
