--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,14 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+#    FLOUCI_APP_TOKEN: '%env(FLOUCI_APP_TOKEN)%'
+#    FLOUCI_APP_SECRET: '%env(FLOUCI_APP_SECRET)%'
+#    FLOUCI_BASE_URL: '%env(FLOUCI_BASE_URL)%'
+    paypal.client_id:   '%env(PAYPAL_CLIENT_ID)%'
+    paypal.client_secret: '%env(PAYPAL_CLIENT_SECRET)%'
+    paypal.sandbox:     true
+
+
 
 services:
     # default configuration for services in *this* file
@@ -14,7 +22,7 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: '../src/*'
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
@@ -24,3 +32,13 @@ services:
     # please note that last definitions always *replace* previous ones
     App\Form\Type\StarRatingType:
         tags: [ form.type ]
+    App\Service\PayPalClient:
+        arguments:
+            $clientId: '%paypal.client_id%'
+            $clientSecret: '%paypal.client_secret%'
+            $sandbox: '%paypal.sandbox%'
+    App\Controller\PayPalController:
+        arguments:
+            $clientId: '%env(PAYPAL_CLIENT_ID)%'
+            $clientSecret: '%env(PAYPAL_CLIENT_SECRET)%'
+            $sandbox: '%env(bool:PAYPAL_SANDBOX)%'
